sharding-jdbc-config-parent/sharding-jdbc-config-common/src/test/resources/error/bind_error.groovy
package error

bind('1')